# quantum-sdks-examples

./: .pre-commit-config.yaml
.github/workflows/: pennylane.yml
pennylane/: .mypy.ini  README.md  pyproject.toml  pytest.ini
pennylane/examples/: __init__.py  bell_states.py  qft_arithmetics.py  test_bell_states.py
utils/: run_embedded_python_code.py
